[package]
name = "level"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = "0.2.6"
lsm303agr = "0.2.2"
microbit-v2 = "0.12.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[profile.release]
debug = true
